--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
 /*  your css code here. If applicable */
+#container{
+	margin: 20px;
+}
+
+#container::before{
+	content: "Before Element"
+}
+
+#container::after{
+	content: "After Element"
+}
+
+#container::before, ::after{
+	color: red;
+	font-size: 20px;
+}
